--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="test_maven">
+    <wb-module deploy-name="TestGithub">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="/test_maven"/>
-        <property name="java-output-path" value="/test_maven/WebRoot/WEB-INF/classes"/>
+        <property name="java-output-path" value="/TestGithub/WebRoot/WEB-INF/classes"/>
     </wb-module>
 </project-modules>
